*2.3.0 [Edge]*

* Make ActionController#render(string) work as a shortcut for render :file/:template/:action => string. [#1435] [Pratik Naik] Examples:

  # Instead of render(:action => 'other_action')
  render('other_action') # argument has no '/'

  # Instead of render(:template => 'controller/action')
  render('controller/action') # argument must not begin with a '/', but contain a '/'

  # Instead of render(:file => '/Users/lifo/home.html.erb')
  render('/Users/lifo/home.html.erb') # argument must begin with a '/'

* Add :prompt option to date/time select helpers. #561 [Sam Oliver]

* Fixed that send_file shouldn't set an etag #1578 [Hongli Lai]

* Allow users to opt out of the spoofing checks in Request#remote_ip.  Useful for sites whose traffic regularly triggers false positives. [Darren Boyd]

* Deprecated formatted_polymorphic_url.  [Jeremy Kemper]

* Added the option to declare an asset_host as an object that responds to call (see http://github.com/dhh/asset-hosting-with-minimum-ssl for an example) [David Heinemeier Hansson]

* Added support for multiple routes.rb files (useful for plugin engines). This also means that draw will no longer clear the route set, you have to do that by hand (shouldn't make a difference to you unless you're doing some funky stuff) [David Heinemeier Hansson]

* Dropped formatted_* routes in favor of just passing in :format as an option. This cuts resource routes generation in half #1359 [aaronbatalion]

* Remove support for old double-encoded cookies from the cookie store.  These values haven't been generated since before 2.1.0, and any users who have visited the app in the intervening 6 months will have had their cookie upgraded. [Michael Koziarski]

* Allow helpers directory to be overridden via ActionController::Base.helpers_dir #1424 [Sam Pohlenz]

* Remove deprecated ActionController::Base#assign_default_content_type_and_charset
